--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
 </head>
 <body>
-    <div class="bg-[url('/bk1.jpg')] min-h-screen bg-cover bg-no-repeat px-10 py-2 bg-blur">
+    <div class="bg-[url('https://images.unsplash.com/photo-1541542684-be0c46417a12?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2815&q=80')] min-h-screen bg-cover bg-no-repeat px-10 py-2 bg-blur">
     <nav class=" flex  items-center">
         <ul class="flex-1">
             <li class="list-none inline-block px-4 text-gray-200 "><a href="#" class="px-2">Home</a></li>
